--- a/static/html/file_upload.html
+++ b/static/html/file_upload.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>CodePen - File upload</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="/static/css/style2.css">
+<link rel="stylesheet" href="/static/css/style.css">
 
 </head>
 <body>
