--- a/static/html/output.html
+++ b/static/html/output.html
@@ -21,11 +21,11 @@
 <body>
     <div class="video-container">
         <video class="video" controls>
-            <source src="video1.mp4" type="video/mp4">
+            <!-- <source src="video1.mp4" type="video/mp4"> -->
             Your browser does not support the video tag.
         </video>
         <video class="video" controls>
-            <source src="video2.mp4" type="video/mp4">
+            <!-- <source src="video2.mp4" type="video/mp4"> -->
             Your browser does not support the video tag.
         </video>
     </div>
