--- a/static/html/file_upload.html
+++ b/static/html/file_upload.html
@@ -12,10 +12,8 @@
 <div class="modal">
 	<div class="modal-header">
 		<div class="modal-logo">
-			<div style="text-align: center;">
 				<h2 class="modal-title">Upload a file</h2>
 				<p class="modal-description">Attach the file below</p>
-			</div>
 			<span class="logo-circle">
 				
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="419.116" viewBox="0 0 512 419.116">
@@ -52,9 +50,11 @@
 			</span> -->
 		</button>
 	</div>
-	<div class="modal-footer">
-		<button class="btn-secondary">Cancel</button>
-		<button class="btn-primary">Upload File</button>
+	<div>
+		<div class="modal-footer">
+			<button class="btn-secondary">Cancel</button>
+			<button class="btn-primary">Upload File</button>
+		</div>
 	</div>
 </div>
 <!-- partial -->
