--- a/static/html/file_upload.html
+++ b/static/html/file_upload.html
@@ -40,10 +40,10 @@
 			<div id="timeInputs" style="display:none; text-align: center;">
 				<div style ="margin-bottom: 5px;">
 					<label for ="Youtube URL" > Start Time:</label>
-					<input class="yt-textbox" type="text" class="centered-textbox" id="referenceStart" name="Youtube URL" placeholder="mm:ss"><br>
+					<input class="yt-textbox" type="text" class="centered-textbox" id="timeStart" name="Youtube URL" placeholder="mm:ss"><br>
 			  	</div>
 				<label for ="Youtube URL"> End Time:</label>
-				<input class="yt-textbox" type="text" class="centered-textbox" id="referenceEnd" name="Youtube URL" placeholder="mm:ss">
+				<input class="yt-textbox" type="text" class="centered-textbox" id="timeEnd" name="Youtube URL" placeholder="mm:ss">
 				<div>
 					<br><br><br><br><br><br><br><br><br>
 				</div>
